trunk/NewArchive/58928f1a3ebdef0abc8ff96a227e4d86-4c14052776b81b965e3761ffd8f9b825/output
+ g++ --std=c++11 -O2 -Wall -pedantic -pthread main.cpp -Weffc++
main.cpp:14:2: warning: extra ‘;’ [-Wpedantic]
 };
  ^
main.cpp:25:2: warning: extra ‘;’ [-Wpedantic]
 };
  ^
main.cpp: In function ‘int main(int, const char**)’:
main.cpp:42:14: error: lvalue required as left operand of assignment
     if( NULL = a );
              ^
